[package]
name = "rosetta-snarkos"
version = "0.1.0"
edition = "2021"
rust-version = "1.59.0"

[dependencies]
mentat = { git = "https://github.com/monadicus/mentat", features = ["server"] }

[profile.release]
codegen-units = 1
panic = "abort"
lto = "thin"
strip = true

[profile.release-docker]
inherits = "release"
codegen-units = 1
opt-level = "z"
panic = "abort"
lto = "thin"
strip = true
